# ping_pong_opengl

./: LICENSE  README.md
src/: CMakeLists.txt  ball.cpp  box.cpp  game.cpp  glad.c  main.cpp  shader.cpp
src/include/: ball.hpp  box.hpp  game.hpp  shader.hpp
src/include/glad/: glad.h
